clang/test/BSC/Negative/NullabilityCheck/Nonnull_global_pointer_initialized/Nonnull_global_pointer_initialized.cbs
// RUN: %clang_cc1 -verify %s
int var = 1;
int *_Nonnull globalP1 = &var;
int *_Nonnull globalP2; // expected-error {{`'globalP2'` is a _Nonnull pointer and must be properly initialized.}}

struct S{
  int *_Nonnull p;
  
};
struct S2{
  struct S s1;
};
struct S s1;  // expected-error {{`'p'` is a _Nonnull pointer and must be properly initialized.}}
struct S2 s2; // expected-error {{`'p'` is a _Nonnull pointer and must be properly initialized.}}
void test() {
  int *_Nonnull localP1 = &var;
  int *_Nonnull localP2;  // expected-error {{`'localP2'` is a _Nonnull pointer and must be properly initialized.}}

  int a = *globalP1;
  int b = *globalP2;
  int c = *localP1;
  int d = *localP2;
  struct S p; // expected-error {{`'p'` is a _Nonnull pointer and must be properly initialized.}}
}

int main() { 

    return 0; 
}